--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://intalk.cc
+url: http://liuyong.github.io
 title: 刘镛的博客
 subtitle: 刘镛客栈——我的博客.
 author: 刘镛
@@ -82,7 +82,7 @@ google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user: liuyong1987@gmail.com
+googleplus_user: liuyong1987
 googleplus_hidden: false
 
 # Pinboard
